2007-04-20  Ville Vainio  <vivainio@gmail.com>

	* Extensions/ipy_render.py: added extension for easy
	interactive text template rendering (todo - add a better
	renderer than string.Template)
	
	* Extensions/ipy_completers.py: introduced Olivier Lauzanne's
	safer & faster 'import' completer.
	
2007-04-19  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py: skip junk files like *.pyc
	
	* Release.py: version number to 0.8.1

2007-04-18  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (safe_execfile): make "ipython foo.py" work with 2.5.1c1
	and later on win32.

2007-04-16  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (showtraceback): Do not crash when running w/o readline.

2007-04-12  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: (ils) Directoy listings are now
	sorted (case sensitive with files and dirs mixed).

2007-04-10  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Release.py (version): Open trunk for 0.8.1 development.

2007-04-10  *** Released version 0.8.0

2007-04-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* Tag 0.8.0 for release.
	
	* IPython/iplib.py (reloadhist): add API function to cleanly
	reload the readline history, which was growing inappropriately on
	every %run call.

	* win32_manual_post_install.py (run): apply last part of Nicolas
	Pernetty's patch (I'd accidentally applied it in a different
	directory and this particular file didn't get patched).

2007-04-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (MAIN_THREAD_ID): get rid of my stupid hack to
	find the main thread id and use the proper API call.  Thanks to
	Stefan for the fix.

	* test/test_prefilter.py (esc_handler_tests): udpate one of Dan's
	unit tests to reflect fixed ticket #52, and add more tests sent by
	him.

	* IPython/iplib.py (raw_input): restore the readline completer
	state on every input, in case third-party code messed it up.
	(_prefilter): revert recent addition of early-escape checks which