@@ -7,6 +7,9 @@
 	* Extensions/ipy_completers.py: introduced Olivier Lauzanne's
 	safer & faster 'import' completer.
 	
+	* Introduced new ipapi methods, _ip.defmacro(name, value)
+	and _ip.defalias(name, command).
+	
 2007-04-19  Ville Vainio  <vivainio@gmail.com>
 
 	* upgrade_dir.py: skip junk files like *.pyc
